--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,23 @@
+# Core FastAPI and async optimizations
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+
+# AI and PDF processing
 google-generativeai==0.3.2
 PyPDF2==3.0.1
 pdfplumber==0.10.3
+
+# RAG and Vector Database
+qdrant-client==1.7.0
+
+# Environment and utilities
 python-dotenv==1.0.0
 aiofiles==23.2.1
-aiohttp
+aiohttp==3.9.0
+orjson==3.9.10
+
+# Security and logging
 rich==13.7.0
