feat: Implement advanced RAG system with Together AI integration
- Replace legacy API rotation system with Together service for AI model access
- Add comprehensive RAG service with document tracking and retrieval strategies
- Implement batching support for Qdrant vector operations
- Add extensive test coverage for Together integration and RAG functionality
- Update configuration and requirements for new AI service dependencies
- Add educational programming resources (Rust and Python documentation)
- Enhance logging and error handling across services
- Update documentation to reflect new RAG architecture

Closes #RAG-IMPLEMENTATION

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,11 +3,20 @@ HOST=0.0.0.0
 PORT=8000
 CORS_ORIGINS=["http://localhost:3000","http://your-domain.com"]
 
-# AI Configuration - REQUIRED: Add your Gemini API keys
+# AI Configuration - REQUIRED: Add your Together.ai API key
+TOGETHER_API_KEY=your_together_api_key_here
+TOGETHER_MODEL=openai/gpt-oss-20b
+TOGETHER_BASE_URL=https://api.together.xyz/v1
+
+# Gemini Configuration - OPTIONAL: For alternative AI models (legacy)
 GEMINI_MODEL=gemini-pro
 GEMINI_API_KEY_1=your_gemini_api_key_here
 GEMINI_API_KEY_2=your_second_gemini_api_key_here
 # Add more keys as needed for rotation: GEMINI_API_KEY_3, GEMINI_API_KEY_4, etc.
+
+# Embedding Configuration
+EMBEDDING_MODEL=BAAI/bge-large-en-v1.5
+EMBEDDING_DIMENSIONS=1024
 
 # Qdrant Cloud Configuration - REQUIRED for RAG
 QDRANT_URL=your_qdrant_cloud_url_here
@@ -23,7 +32,9 @@ JWT_SECRET=change_this_to_a_secure_random_string_in_production
 ENCRYPTION_KEY=change_this_to_another_secure_random_string
 
 # Logging Configuration
-LOG_LEVEL=INFO
+# For development: LOG_LEVEL=INFO, LOG_FORMAT=text
+# For production: LOG_LEVEL=WARNING, LOG_FORMAT=json
+LOG_LEVEL=WARNING
 LOG_FORMAT=json
 
 # Performance Settings
