--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ dependencies = [
     "python-dotenv==1.0.0",
     "python-jose[cryptography]==3.3.0",
     "python-multipart==0.0.6",
-    "qdrant-client==1.7.0",
+    "qdrant-client==1.12.0",
     "rich==13.7.0",
     "together==1.2.11",
     "uvicorn[standard]==0.24.0",
+    "llama-index-core==0.11.0",
+    "llama-index-vector-stores-qdrant==0.3.0",
+    "llama-index-embeddings-together==0.2.0",
+    "llama-index-readers-file==0.2.0",
 ]
